# VPlayer

./: .gitignore  README.md  settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/example/lyc/vrexplayer/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/example/lyc/vrexplayer/Utils/: CameraUtil.java  DpiPxUtil.java  LogUtils.java  RxBus.java  SelectedPosition.java  (+2 more)
app/src/main/res/anim/: left_appear.xml  left_miss.xml
app/src/main/res/drawable/: logo_animlist.xml  shape_scrollview_item_imageview.xml
app/src/main/res/layout/: activity_client.xml  activity_detail_pic_acitvity.xml  activity_files.xml  activity_logo_acitivity.xml  activity_main.xml  activity_new_pic_and_vidio.xml  activity_pic_acitivity.xml  activity_server.xml  activity_vr_player.xml  activity_wifi_p2p_rec.xml  custom_second_files_view.xml  custum_scroll_item_view_double.xml  custum_scroll_item_view_single.xml  fragment_media.xml  fragment_wifi_transfer.xml  item_view_textview.xml  item_view_textview_single.xml  seekbar_double.xml
app/src/main/res/values/: colors.xml  dimens.xml  strings.xml  styles.xml
app/src/test/java/com/example/lyc/vrexplayer/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
wifip2plib/src/androidTest/java/com/example/lyc/wifip2plib/: ExampleInstrumentedTest.java
wifip2plib/src/main/: AndroidManifest.xml
wifip2plib/src/main/res/values/: strings.xml
wifip2plib/src/test/java/com/example/lyc/wifip2plib/: ExampleUnitTest.java
(+29 files in other folders)
